[package]
name = "youtube-tui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.4"
error-chain = "0.12.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = "1.7.1"
futures = "0.3.15"
hyper = "0.14.9"
tokio-core = "0.1.18"
serde_json = "1.0.64"
youtube_dl = "0.6.1"
rustube = "0.3.5"

crossterm = { version = "0.19", features = [ "serde" ] }
serde = {version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.7.3", default-features = false, features = ["std"] }
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
thiserror = "1.0"

serde_derive = "1.0"
serde_stacker = "0.1"
image = "0.23.14"
jpeg-decoder = "0.1.22"




termion = "1.5.1"
mp4 = "0.8.2"
#gstreamer = "0.16.7"
ffmpeg-frame-grabber = "0.1.0"
image-visualizer = "0.1.1"
rodio = "0.14.0"
#ffmpeg-decoder = "0.1.3"

async-trait = "0.1.51"
