[package]
name = "youtube-tui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = "1.7.1"
futures = "0.3.15"
hyper = "0.14.9"
serde_json = "1.0.64"
rustube = "0.3.5"

crossterm = { version = "0.19", features = [ "serde" ] }
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }

serde_derive = "1.0"
serde_stacker = "0.1"
image = "0.23.14"
jpeg-decoder = "0.1.22"

termion = "1.5.1"
ffmpeg-frame-grabber = "0.1.0"
image-visualizer = "0.1.1"
rodio = "0.14.0"

async-trait = "0.1.51"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]
